--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "pretest": "npm run lint",
     "test": "jest --env=node --coverage"
   },
@@ -16,7 +17,7 @@
   "lint-staged": {
     "*.{js,json,css,md}": [
       "prettier --write",
-      "git add"
+      "eslint --fix ."
     ]
   },
   "repository": {
@@ -31,17 +32,15 @@
   },
   "homepage": "https://github.com/tsamaya/async-each-loop#readme",
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.19.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.8",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
-    "mocha": "^6.2.1",
-    "prettier": "^1.18.2"
-  },
-  "dependencies": {}
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0"
+  }
 }
